[gd_scene load_steps=12 format=3 uid="uid://bl8r2uovutwoc"]

[ext_resource type="Texture2D" uid="uid://dxvmi2v7m7h57" path="res://art/NPC art/Master yura/IDLE.png" id="1_3cgf7"]
[ext_resource type="Script" path="res://Characters/NPC/master_yura_npc.gd" id="1_g5ptf"]
[ext_resource type="PackedScene" uid="uid://6b8wqidi8wa4" path="res://Characters/NPC/dialogue_masteryurachatui.tscn" id="3_2qm4k"]
[ext_resource type="PackedScene" uid="uid://dki4l5xcykrd" path="res://Characters/NPC/dialogue2_masteryurachatui.tscn" id="4_e1utp"]

[sub_resource type="Animation" id="Animation_8m263"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_ytpf5"]
resource_name = "idle"
length = 0.5
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pd486"]
_data = {
"RESET": SubResource("Animation_8m263"),
"idle": SubResource("Animation_ytpf5")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3xhtk"]
size = Vector2(15, 32.6667)

[sub_resource type="Animation" id="Animation_67ce1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2fwww"]
resource_name = "bling"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bscbi"]
_data = {
"RESET": SubResource("Animation_67ce1"),
"bling": SubResource("Animation_2fwww")
}

[node name="MasterYuraNPC" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 16
script = ExtResource("1_g5ptf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_3cgf7")
hframes = 3
vframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_pd486")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 9.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_3xhtk")

[node name="Chat" type="Label" parent="."]
visible = false
offset_left = -52.0
offset_top = -79.0
offset_right = 69.0
offset_bottom = -53.0
text = "Press 'E' to chat"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Chat"]
autoplay = "bling"
libraries = {
"": SubResource("AnimationLibrary_bscbi")
}

[node name="Dialogue" parent="." instance=ExtResource("3_2qm4k")]
offset_left = -87.0
offset_top = -97.0
offset_right = 87.0
offset_bottom = -31.0

[node name="Dialogue2" parent="." instance=ExtResource("4_e1utp")]
offset_left = -88.0
offset_top = -99.0
offset_right = 88.0
offset_bottom = -31.0

[connection signal="dialogue_finished" from="Dialogue" to="." method="_on_dialogue_dialogue_finished"]
[connection signal="dialogue_finished" from="Dialogue2" to="." method="_on_dialogue_2_dialogue_finished"]
